🔄 synced local 'skyvern-frontend/src/' with remote 'skyvern-frontend/src/'
## What

Implements UI to effect a browser recording action. Via a [previous PR](https://github.com/Skyvern-AI/skyvern-cloud/pull/7433), a(n) `@skyvern.com` user can hover over the (+) node in a workflow and select a "Record browser" option. This option was greyed out (disabled). Now:

- it is enabled (when a live browser is detected)
- when selected, begins a browser recording
  - automatically initiates "take control"
  - a "browser recording" is a sequential list of events, exfiltrated from the browser as the user interacts with it

During a browser recording:
- we show a red spinner on the (+) node
  - we show the number of events, as they come in, on the red spinner
- we show a red border around the browser
- we show a "Browser is recording (?)" message above the browser
  - hovering the (?) shows a message about how to "finish" the recording
- we show a "cancel" button above the browser, to cancel the recording
  - will hoist a confirmation dialog if the recording contains any events

Once the user clicks the red spinner to "Finish recording", we make a fake backend call to generate some fake blocks, and then insert those into the workflow. (Again, this is only visible to `@skyvern.com` users, so we shouldn't disappoint anyone.)

Here is a demo video:

https://github.com/user-attachments/assets/1745ad7b-aef8-4997-8f75-63bdcc3176a0

## Implementation Notes

- fake blocks (no real blocks yet)
- event compression
  - 1000 JSON events is about 1.5MB, and it's not hard to generate that amount, currently
  - therefore, I compress events into chunks (on the fly, in 1000 event chunks) before sending to backend
  - I used `queueMicrotask` for the compression code itself, but this still has the potential to block the UI thread
    - I did not notice any lag during compression; but, if it becomes a problem, we can move to web workers

## vnext

Eventually:
- point-of-origin should do compression i

--- a/skyvern-frontend/src/components/browser-stream.css
+++ b/skyvern-frontend/src/components/browser-stream.css
@@ -70,6 +70,7 @@
 
 .browser-stream > div {
   background: transparent !important;
+  aspect-ratio: 16/9 !important;
 }
 
 .browser-stream .control-button {
